--- a/src/app/tarefas/listar/listar.component.html
+++ b/src/app/tarefas/listar/listar.component.html
@@ -1,21 +1,20 @@
 <h1>Tarefas</h1>
 
-<table  class="table table-striped table-bordered table-hover">
+<table *ngIf="responseTarefas" class="table table-striped table-bordered table-hover">
   <tbody>
     <tr>
       <th>Tarefa</th>
       <th class="text-center">
-        <a 
+        <a [routerLink]="['/tarefas/cadastrar']" 
           class="btn btn-xs btn-success">
           <span class="glyphicon glyphicon-plus" 
             aria-hidden="true"></span> Novo
         </a>
     </th>
     </tr>
-    <tr >
+    <tr *ngFor="let tarefa of responseTarefas">
       <td style="width: 70px" class="text-center">
-        <input 
-          type="checkbox">
+        {{tarefa.name}}
       </td>
       <td class="text-center" style="width: 200px">
         <a 
