--- a/src/app/tarefas/listar/listar.component.html
+++ b/src/app/tarefas/listar/listar.component.html
@@ -24,7 +24,7 @@
             aria-hidden="true"></span> Editar
         </a>
         <a href="#" title="Remover" alt="Remover" 
-          class="btn btn-xs btn-danger">
+          class="btn btn-xs btn-danger" (click)="remover(tarefa.id, tarefa.name)">
           <span class="glyphicon glyphicon-remove" 
             aria-hidden="true"></span> Remover
         </a>
